hphp/test/zend/bad/ext/standard/tests/file/chgrp.php
<?php
chgrp("sjhgfskhagkfdgskjfhgskfsdgfkdsajf", NULL);
echo "ALIVE\n";
?>